--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
     </main>
     <footer class="footer block">
-        <img width="100px" height="100px" alt="rs school logo" src="https://rs.school/images/partners/logo-rs.svg"/>
+        <img width="100px" height="100px" alt="rs school logo" src="https://rs.school/images/partners/logo-rs.svg">
     </footer>
 </body>
 </html>
