refactor: change raw "&" for "&amp;"

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h3 class="experience-section__heading">Non-commercial experience</h3>
         </section>
         <section class="education-section">
-            <h3 class="education-section__heading">Education & Courses</h3>
+            <h3 class="education-section__heading">Education &amp; Courses</h3>
         </section>
     </main>
     <footer class="footer block">
